# raster

./: .gitignore  Cargo.toml
crates/image/: Cargo.toml
crates/image/src/: encoder.rs  lib.rs  pixel.rs  surface.rs  writer.rs
meshes/: Halloween_Pumpkin_Blend.mtl
src/: aabb.rs  bounded.rs  bounding_box.rs  camera.rs  cli.yml  color.rs  compound.rs  encoder.rs  fixed_size_stack.rs  hit_result.rs  hittable.rs  intersectable.rs  kdtree.rs  lib.rs  main.rs  material.rs  materials.rs  math.rs  octree.rs  perlin.rs  pixel.rs  ray.rs  ray_scanner.rs  scene.rs  shape_list.rs  shapes.rs  skinnable.rs  sky.rs  sphere.rs  stats.rs  surface.rs  texture.rs  textures.rs  transform.rs  utils.rs  volume.rs  writer.rs
src/materials/: bump_mapper.rs  debug_material.rs  dielectric.rs  diffuse_light.rs  invert_normal.rs  lambertian.rs  material.rs  metal.rs  mod.rs  surface_mapper.rs  utils.rs
src/shapes/: aabb.rs  box_shape.rs  geometry_wrapper.rs  hit_result.rs  hittable.rs  invert_normal.rs  medium.rs  mesh.rs  mod.rs  parabola.rs  primitive.rs  rectangle.rs  rotate.rs  scale.rs  shape.rs  shape_list.rs  sphere.rs  transform.rs  translate.rs  unskinned_shape.rs  volume.rs
src/shapes/mesh/: mod.rs  obj_file.rs  tri_mesh.rs  triangle.rs  vertex.rs
src/shapes/mesh/arch/: generic.rs
src/textures/: checker_texture.rs  image_texture.rs  mod.rs  noise_normal.rs  noise_texture.rs  solid_texture.rs  texture.rs
