[package]
name = "raster"
version = "0.1.0"
authors = ["Stewart Tootill <stootill@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"num" = "*"
"cgmath" = "*"
"image" = { path = "./crates/image" }
"rand" = "*"
"clap" = { version = "~2.27.0", features = ["yaml"] }
"futures" = { version= "~0.3.5" }
"tokio" = { version="0.2.*", features = ["full"] }

[profile.release]
debug = 2