[package]
name = "raster"
version = "0.1.0"
authors = ["Stewart Tootill <stootill@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"num" = "*"
"cgmath" = "*"
"image" = "0.23.*"
"rand" = "*"
"clap" = { version = "~2.27.0", features = ["yaml"] }
"futures" = { version= "~0.3.5" }
"tokio" = { version="0.2.*", features = ["full"] }
"num-traits" = "0.2.*"

[profile.release]
debug = 2