[package]
name = "raster"
version = "0.1.0"
authors = ["Stewart Tootill <stootill@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"anyhow" = "1"
"num" = "0.4"
"cgmath" = "0.18"
"image" = "0.23"
"clap" = { version = "2", features = ["yaml"] }
"futures" = { version= "0.3" }
"tokio" = { version="0.2", features = ["full"] }
"num-traits" = "0.2"
"obj" = "0.10"
"random-fast-rng" = "0.1"

[profile.release]
debug = 2